# libJpegDemo

./: build.gradle
app/: build.gradle
app/src/androidTest/java/com/andnux/libjpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/andnux/libjpegdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/andnux/libjpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libjpeg/: CMakeLists.txt  build.gradle  proguard-rules.pro
libjpeg/src/androidTest/java/com/andnux/libjpeg/: ExampleInstrumentedTest.java
libjpeg/src/main/: AndroidManifest.xml
libjpeg/src/main/cpp/: common.h  native-lib.c
libjpeg/src/main/cpp/jpeg/: cjpeg.c  djpeg.c  example.c  jconfig.h  jpeglib.h
libjpeg/src/main/java/com/andnux/libjpeg/: JpegNative.java
libjpeg/src/test/java/com/andnux/libjpeg/: ExampleUnitTest.java
